fix(header) : fix header width to align it

--- a/src/Components/header/index.css
+++ b/src/Components/header/index.css
@@ -3,7 +3,13 @@ header{
     width: 100%;
     margin-top: 0.8rem;
     display: flex;
+    justify-content:  center;
+}
+header>.container{
+    width: 90%;
+    display: flex;
     justify-content: space-between;
+    flex-direction: row;
 }
 header .logo{
     font-size: 1.2rem;
